# armarinho-tpv-telegram-bot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: config.py
src/commands/: __init__.py  help.py  start.py
src/handlers/: __init__.py  error.py  message.py
src/helpers/: qr_code.py
